[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fastlayer"
version = "0.1.0"
description = "Soft-CPU Data Cache Engine"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "numpy",
    "numba"
]

# SPDX 準拠のライセンス指定
license = { text = "Apache-2.0" }


[tool.setuptools.packages.find]
where = ["."]

